Remove overflow-wrap from body in Card styles and fix media query for 1200px

--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -12,14 +12,14 @@
 }
 
 .body {
-  @apply text-very-dark-gray font-medium text-[2.6rem] leading-tight break-words;
+  @apply text-very-dark-gray font-medium text-[2.6rem] leading-tight;
 }
 
 .divider {
   @apply absolute top-[41px] right-[-7px] w-[1px] h-[74px] bg-dark-gray transform translate-x-[-50%]
 }
 
-@media only screen and (max-width: 1150px){
+@media only screen and (max-width: 1200px){
   .card {
     @apply flex-wrap top-[-20%] py-[2.6em] items-center text-center gap-[1.3rem] min-w-[32.5rem] max-w-[74.5rem] justify-center;
   }
